--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
         "build:mock": "webpack --config webpack.config.js --env.agent=mock",
         "build:azure": "webpack --config webpack.config.js --env.agent=azure",
         "build:github": "webpack --config webpack.config.js --env.agent=github",
-        "build:mock:prod": "npm run build:mock -- --env.mode=production",
-        "build:azure:prod": "npm run build:azure -- --env.mode=production",
-        "build:github:prod": "npm run build:github -- --env.mode=production",
+        "compress:mock": "npm run build:mock -- --env.task=compress",
+        "compress:azure": "npm run build:azure -- --env.task=compress",
+        "compress:github": "npm run build:github -- --env.task=compress",
         "build": "npm run build:mock && npm run build:azure && npm run build:github",
-        "build:prod": "npm run build:mock:prod && npm run build:azure:prod && npm run build:github:prod",
+        "compress": "npm run compress:mock && npm run compress:azure && npm run compress:github",
         "publish:azure": "tfx extension publish --root ./dist/azure --no-wait-validation --auth-type pat"
     },
     "author": "GitTools",
@@ -42,6 +42,7 @@
         "json-update": "^5.3.0",
         "reflect-metadata": "^0.1.13",
         "replace-in-file-webpack-plugin": "^1.0.6",
+        "terser-webpack-plugin": "^2.3.4",
         "tfx-cli": "^0.7.11",
         "ts-loader": "^6.2.1",
         "tslint": "^6.0.0",
