--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,13 @@ jobs:
         git fetch --prune --unshallow
     - run: |
         npm install
-        npm run build:github 
+        npm run build:github
         npm run build:azure
       name: Build code
     - name: Install GitVersion
       uses: ./gitversion/setup
       with:
-        versionSpec: '5.1.2'
+        versionSpec: '5.x'
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: ./gitversion/execute
