fix parameters parsing, format

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,7 +5,7 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "none",
-    "bracketSpacing": false,
+    "bracketSpacing": true,
     "arrowParens": "avoid",
     "parser": "typescript"
 }
