fix security alert

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "ts-loader": "^6.2.1",
         "typescript": "^3.8.3",
         "webpack": "^4.42.0",
-        "webpack-cli": "^3.3.11"
+        "webpack-cli": "^3.3.11",
+        "minimist": "^1.2.5"
     }
 }
