--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,13 +20,13 @@ jobs:
         npm run build:github
         npm run build:azure
 
-        npm run compress:github
-        npm run compress:azure
+        # npm run compress:github
+        # npm run compress:azure
       name: Build code
     - name: Install GitVersion
       uses: ./gitversion/setup
       with:
-        versionSpec: '5.1.x'
+        versionSpec: '5.x'
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: ./gitversion/execute
