fix the description length of the github actions (should be less than 125 chars)

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: use-actions
-description: GitHub Action for Easy Semantic Versioning with GitVersion. Contains actions to install a specific version of GitVersion and run it.
+description: GitHub Action for Easy Semantic Versioning with GitVersion. Includes actions to setup and run a specific version of the tool
 author: GitTools
 branding:
   color: gray-dark
