Align GitHub Action name with Azure Pipelines extension

--- a/action.yml
+++ b/action.yml
@@ -1,18 +1,9 @@
-name: use-actions
-description: GitHub Action for Easy Semantic Versioning with GitVersion. Includes actions to setup and run a specific version of the tool
+name: GitTools
+description: Build tasks for easy semantic versioning for projects using Git and release management.
 author: GitTools
 branding:
   color: gray-dark
   icon: git-pull-request
-inputs:
-  versionSpec:
-    description: Required version in the form of 5.x or exact version like 5.0.0
-    required: true
-    default: ''
-  includePrerelease:
-    description: Include pre-release versions when matching a version 
-    required: false
-    default: 'false'
 runs:
   using: node12
   main: dist/github/setup/index.js
