--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,5 +1,11 @@
 pull_request_rules:
-  - name: Automatic merge on dependabot success PR
+  - name: Automatic approve on dependabot PR
+    conditions:
+      - author~=^dependabot(|-preview)\[bot\]$
+    actions:
+      review:
+        type: APPROVE
+  - name: Automatic merge on dependabot PR after success CI
     conditions:
       - author~=^dependabot(|-preview)\[bot\]$
       - check-success=build (windows-latest)
