--- a/.mergify.yml
+++ b/.mergify.yml
@@ -18,6 +18,7 @@ pull_request_rules:
   - name: Thank contributor
     conditions:
       - merged
+      - -author~=^dependabot(|-preview)\[bot\]$
     actions:
       comment:
         message: "Thank you @{{author}} for your contribution!"
