Remove `merge: strict` from the Mergify configuration because it is deprecated:
> The configuration uses the deprecated strict mode of the merge action.
> A brownout is planned for the whole December 6th, 2021 day.
> This option will be removed on January 10th, 2022.
> For more information: https://blog.mergify.com/strict-mode-deprecation/

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,13 +8,12 @@ pull_request_rules:
   - name: Automatic merge on dependabot PR after success CI
     conditions:
       - author~=^dependabot(|-preview)\[bot\]$
+      - '#commits-behind=0' # Only merge up to date pull requests
       - check-success=build (windows-latest)
       - check-success=build (ubuntu-latest)
       - check-success=build (macos-latest)
     actions:
       merge:
-        method: rebase
-        strict: smart
   - name: Thank contributor
     conditions:
       - merged
