--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
         "prettier": "^2.5.1",
         "reflect-metadata": "^0.1.13",
         "replace-in-file-webpack-plugin": "^1.0.6",
+        "shelljs": "^0.8.5",
         "terser-webpack-plugin": "^5.3.0",
         "tfx-cli": "^0.10.0",
         "trim-newlines": ">=4.0.2",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.4",
         "underscore": ">=1.13.2",
+        "validator": "^13.7.0",
         "webpack": "^5.66.0",
         "webpack-cli": "^4.9.1"
     }
