--- a/gitversion/setup/action.yml
+++ b/gitversion/setup/action.yml
@@ -16,3 +16,7 @@ inputs:
     description: Include pre-release versions when matching a version
     required: false
     default: 'false'
+  ignoreFailedSources:
+    description: Treat package source failures as warnings.
+    required: false
+    default: 'false'
