--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "devDependencies": {
         "@types/node": "^18.15.0",
         "@types/q": "^1.5.5",
-        "@types/semver-compare": "^1.0.1",
+        "@types/semver": "^7.3.13",
         "@types/uuid": "^9.0.1",
         "minimist": "^1.2.8",
         "prettier": "^2.8.4",
