--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "azure-pipelines-task-lib": "^4.3.0",
         "azure-pipelines-tool-lib": "^1.3.2",
         "inversify": "^6.0.1",
+        "semver": "^7.3.8",
         "typed-rest-client": "^1.8.9",
         "uuid": "^9.0.0"
     },
