--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
         "azure-pipelines-task-lib": "^4.3.0",
         "azure-pipelines-tool-lib": "^1.3.2",
         "inversify": "^6.0.1",
-        "semver": "^7.3.8",
         "typed-rest-client": "^1.8.9",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/node": "^18.15.0",
         "@types/q": "^1.5.5",
-        "@types/semver": "^7.3.13",
+        "@types/semver-compare": "^1.0.1",
         "@types/uuid": "^9.0.1",
         "minimist": "^1.2.8",
         "prettier": "^2.8.4",
