--- a/gitversion/setup/action.yml
+++ b/gitversion/setup/action.yml
@@ -20,3 +20,7 @@ inputs:
     description: Treat package source failures as warnings.
     required: false
     default: 'false'
+  preferLatestVersion:
+    description: Prefer to download the latest version matching the versionSpec, even if there is a local cached version.
+    required: false
+    default: 'false'
