test the azure pipeline setup bundle

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -1,11 +1,12 @@
 trigger:
-- main
+  - main
 pr:
-- main
+  - main
 
 variables:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 'true'
   DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
+  INPUT_VERSIONSPEC: '5.x'
 
 strategy:
   matrix:
@@ -27,3 +28,7 @@ steps:
       npm run format-check
       npm run build:azure
     displayName: 'Build code'
+  - bash: 'INPUT_VERSIONSPEC=$(INPUT_VERSIONSPEC) node ./gitversion/setup/bundle.js'
+    displayName: gitversion/setup
+    workingDirectory: dist/azure
+
