test the azure pipeline execute bundle

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -31,4 +31,6 @@ steps:
   - bash: 'INPUT_VERSIONSPEC=$(INPUT_VERSIONSPEC) node ./gitversion/setup/bundle.js'
     displayName: gitversion/setup
     workingDirectory: dist/azure
-
+  - bash: 'node ./gitversion/execute/bundle.js'
+    displayName: gitversion/execute
+    workingDirectory: dist/azure
