test the output and variables

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -28,9 +28,16 @@ steps:
       npm run format-check
       npm run build:azure
     displayName: 'Build code'
-  - bash: 'INPUT_VERSIONSPEC=$(INPUT_VERSIONSPEC) node ./gitversion/setup/bundle.js'
+  - pwsh: $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"; node ./gitversion/setup/bundle.js
     displayName: gitversion/setup
     workingDirectory: dist/azure
-  - bash: 'node ./gitversion/execute/bundle.js'
+  - pwsh: node ./gitversion/execute/bundle.js
+    name: version
     displayName: gitversion/execute
     workingDirectory: dist/azure
+  - pwsh: |
+      echo "FullSemVer (fullSemVer)                    : $(fullSemVer)"
+      echo "FullSemVer (GitVersion_FullSemVer)         : $(GitVersion_FullSemVer)"
+      echo "FullSemVer (version.fullSemVer)            : $(version.fullSemVer)"
+      echo "FullSemVer (version.GitVersion_FullSemVer) : $(version.GitVersion_FullSemVer)"
+    displayName: Use variables and output
