remove azure-pipelines-task-lib dependency, it's referenced by azure-pipelines-tool-lib

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -12,7 +12,7 @@ strategy:
   matrix:
     linux:
       imageName: 'ubuntu-latest'
-    mac:
+    macos:
       imageName: 'macos-latest'
     windows:
       imageName: 'windows-latest'
