--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -8,36 +8,39 @@ variables:
   DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
   INPUT_VERSIONSPEC: '5.x'
 
-strategy:
-  matrix:
-    linux:
-      imageName: 'ubuntu-latest'
-    macos:
-      imageName: 'macos-latest'
-    windows:
-      imageName: 'windows-latest'
+jobs:
+- job: build
+  displayName: ''
+  strategy:
+    matrix:
+      'ubuntu-latest':
+        imageName: 'ubuntu-latest'
+      'macos-latest':
+        imageName: 'macos-latest'
+      'windows-latest':
+        imageName: 'windows-latest'
 
-pool:
-  vmImage: $(imageName)
+  pool:
+    vmImage: $(imageName)
 
-steps:
-  - checkout: self
-    fetchDepth: '0'
-  - pwsh: |
-      npm install
-      npm run format-check
-      npm run build:azure
-    displayName: 'Build code'
-  - pwsh: $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"; node ./gitversion/setup/bundle.js
-    displayName: gitversion/setup
-    workingDirectory: dist/azure
-  - pwsh: node ./gitversion/execute/bundle.js
-    name: version
-    displayName: gitversion/execute
-    workingDirectory: dist/azure
-  - pwsh: |
-      echo "FullSemVer (fullSemVer)                    : $(fullSemVer)"
-      echo "FullSemVer (GitVersion_FullSemVer)         : $(GitVersion_FullSemVer)"
-      echo "FullSemVer (version.fullSemVer)            : $(version.fullSemVer)"
-      echo "FullSemVer (version.GitVersion_FullSemVer) : $(version.GitVersion_FullSemVer)"
-    displayName: Use variables and output
+  steps:
+    - checkout: self
+      fetchDepth: '0'
+    - pwsh: |
+        npm install
+        npm run format-check
+        npm run build:azure
+      displayName: 'Build code'
+    - pwsh: $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"; node ./gitversion/setup/bundle.js
+      displayName: gitversion/setup
+      workingDirectory: dist/azure
+    - pwsh: node ./gitversion/execute/bundle.js
+      name: version
+      displayName: gitversion/execute
+      workingDirectory: dist/azure
+    - pwsh: |
+        echo "FullSemVer (fullSemVer)                    : $(fullSemVer)"
+        echo "FullSemVer (GitVersion_FullSemVer)         : $(GitVersion_FullSemVer)"
+        echo "FullSemVer (version.fullSemVer)            : $(version.fullSemVer)"
+        echo "FullSemVer (version.GitVersion_FullSemVer) : $(version.GitVersion_FullSemVer)"
+      displayName: Use variables and output
