set inputs for gitversion setup in azure

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -7,6 +7,9 @@ variables:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 'true'
   DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
   INPUT_VERSIONSPEC: '5.x'
+  INPUT_INCLUDEPRERELEASE: 'false'
+  INPUT_IGNOREFAILEDSOURCES: 'true'
+  INPUT_PREFERLATESTVERSION: 'false'
 
 jobs:
 - job: build
@@ -32,7 +35,15 @@ jobs:
         npm run build:github
         npm run build:azure
       displayName: 'Build code'
-    - pwsh: $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"; node ./gitversion/setup/bundle.js
+    - pwsh: |
+        # set the inputs for the 'gitversion/setup' action
+        $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"
+        $env:INPUT_INCLUDEPRERELEASE = "$(INPUT_INCLUDEPRERELEASE)"
+        $env:INPUT_IGNOREFAILEDSOURCES = "$(INPUT_IGNOREFAILEDSOURCES)"
+        $env:INPUT_PREFERLATESTVERSION = "$(INPUT_PREFERLATESTVERSION)"
+
+        # run the 'gitversion/setup' action
+        node ./gitversion/setup/bundle.js
       displayName: gitversion/setup
       workingDirectory: dist/azure
     - pwsh: node ./gitversion/execute/bundle.js
