--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -4,12 +4,19 @@ pr:
   - main
 
 variables:
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 'true'
-  DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
-  INPUT_VERSIONSPEC: '5.x'
-  INPUT_INCLUDEPRERELEASE: 'false'
-  INPUT_IGNOREFAILEDSOURCES: 'true'
-  INPUT_PREFERLATESTVERSION: 'false'
+  - group: gittools-actions
+  - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
+    value: 'true'
+  - name: DOTNET_CLI_TELEMETRY_OPTOUT
+    value: 'true'
+  - name: INPUT_VERSIONSPEC
+    value: '5.x'
+  - name: INPUT_INCLUDEPRERELEASE
+    value: 'false'
+  - name: INPUT_IGNOREFAILEDSOURCES
+    value: 'true'
+  - name: INPUT_PREFERLATESTVERSION
+    value: 'false'
 
 jobs:
 - job: build
