--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -39,8 +39,8 @@ jobs:
     - pwsh: |
         npm install
         npm run format-check
-        npm run build:github
-        npm run build:azure
+        npm run build:agent:github
+        npm run build:agent:azure
       displayName: 'Build code'
     - pwsh: |
         # set the inputs for the 'gitversion/setup' action
