--- a/.editorconfig
+++ b/.editorconfig
@@ -2,16 +2,13 @@
 root = true
 
 [*]
+charset = utf-8
 indent_style = space
 indent_size = 4
 end_of_line = lf
-charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = off
 
-[*.yml]
-indent_size = 2
-
-[*.md]
+[{*.yml,*.yaml,*.md}]
 indent_size = 2
