--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+#dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.test/
 
 .taskkey
-*.js
-!dist/**/*.js
 *.vsix
 
-.idea/
 /dist/mock/
