--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,6 @@
     "trailingComma": "none",
     "bracketSpacing": true,
     "arrowParens": "avoid",
-    "parser": "typescript"
+    "parser": "typescript",
+    "endOfLine": "lf"
 }
