include additional variable in pipelines

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -58,6 +58,21 @@ jobs:
       displayName: gitversion/execute
       workingDirectory: dist/azure
     - pwsh: |
+        echo "Major      (major)                         : $(major)"
+        echo "Major      (GitVersion_Major)              : $(GitVersion_Major)"
+        echo "Major      (version.major)                 : $(version.major)"
+        echo "Major      (version.GitVersion_Major)      : $(version.GitVersion_Major)"
+
+        echo "Minor      (minor)                         : $(minor)"
+        echo "Minor      (GitVersion_Minor)              : $(GitVersion_Minor)"
+        echo "Minor      (version.minor)                 : $(version.minor)"
+        echo "Minor      (version.GitVersion_Minor)      : $(version.GitVersion_Minor)"
+
+        echo "Patch      (patch)                         : $(patch)"
+        echo "Patch      (GitVersion_Patch)              : $(GitVersion_Patch)"
+        echo "Patch      (version.patch)                 : $(version.patch)"
+        echo "Patch      (version.GitVersion_Patch)      : $(version.GitVersion_Patch)"
+
         echo "FullSemVer (fullSemVer)                    : $(fullSemVer)"
         echo "FullSemVer (GitVersion_FullSemVer)         : $(GitVersion_FullSemVer)"
         echo "FullSemVer (version.fullSemVer)            : $(version.fullSemVer)"
