--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,21 @@ jobs:
       id: gitversion # step id used as reference for output values
       uses: ./gitversion/execute
     - run: |
+        echo "Major      (major)                                          : ${{ env.major }}"
+        echo "Major      (env.GitVersion_Major)                           : ${{ env.GitVersion_Major }}"
+        echo "Major      (steps.gitversion.outputs.major)                 : ${{ steps.gitversion.outputs.major }}"
+        echo "Major      (steps.gitversion.outputs.GitVersion_Major)      : ${{ steps.gitversion.outputs.GitVersion_Major }}"
+
+        echo "Minor      (minor)                                          : ${{ env.minor }}"
+        echo "Minor      (env.GitVersion_Minor)                           : ${{ env.GitVersion_Minor }}"
+        echo "Minor      (steps.gitversion.outputs.minor)                 : ${{ steps.gitversion.outputs.minor }}"
+        echo "Minor      (steps.gitversion.outputs.GitVersion_Minor)      : ${{ steps.gitversion.outputs.GitVersion_Minor }}"
+
+        echo "Patch      (patch)                                          : ${{ env.patch }}"
+        echo "Patch      (env.GitVersion_Patch)                           : ${{ env.GitVersion_Patch }}"
+        echo "Patch      (steps.gitversion.outputs.patch)                 : ${{ steps.gitversion.outputs.patch }}"
+        echo "Patch      (steps.gitversion.outputs.GitVersion_Patch)      : ${{ steps.gitversion.outputs.GitVersion_Patch }}"
+
         echo "FullSemVer (env.fullSemVer)                                 : ${{ env.fullSemVer }}"
         echo "FullSemVer (env.GitVersion_FullSemVer)                      : ${{ env.GitVersion_FullSemVer }}"
         echo "FullSemVer (steps.gitversion.outputs.fullSemVer)            : ${{ steps.gitversion.outputs.fullSemVer }}"
