#1051 - use the new arguments in the pipeline/action

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -53,7 +53,17 @@ jobs:
         node ./gitversion/setup/bundle.js
       displayName: gitversion/setup
       workingDirectory: dist/azure
-    - pwsh: node ./gitversion/execute/bundle.js
+    - pwsh: |
+        # set the inputs for the 'gitversion/execute' action
+        $env:INPUT_TARGETPATH = './'
+        $env:INPUT_DISABLECACHE = 'true'
+        $env:INPUT_DISABLENORMALIZATION = 'true'
+        $env:INPUT_OVERRIDECONFIG = '
+          next-version=1.0.0
+          update-build-number=false'
+
+        # run the 'gitversion/execute' action
+        node ./gitversion/execute/bundle.js
       name: version
       displayName: gitversion/execute
       workingDirectory: dist/azure
