#1052 - set tool install version range check

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -9,14 +9,6 @@ variables:
     value: 'true'
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 'true'
-  - name: INPUT_VERSIONSPEC
-    value: '5.x'
-  - name: INPUT_INCLUDEPRERELEASE
-    value: 'false'
-  - name: INPUT_IGNOREFAILEDSOURCES
-    value: 'true'
-  - name: INPUT_PREFERLATESTVERSION
-    value: 'false'
 
 jobs:
 - job: build
@@ -44,10 +36,10 @@ jobs:
       displayName: 'Build code'
     - pwsh: |
         # set the inputs for the 'gitversion/setup' action
-        $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"
-        $env:INPUT_INCLUDEPRERELEASE = "$(INPUT_INCLUDEPRERELEASE)"
-        $env:INPUT_IGNOREFAILEDSOURCES = "$(INPUT_IGNOREFAILEDSOURCES)"
-        $env:INPUT_PREFERLATESTVERSION = "$(INPUT_PREFERLATESTVERSION)"
+        $env:INPUT_VERSIONSPEC = '5.x'
+        $env:INPUT_INCLUDEPRERELEASE = 'false'
+        $env:INPUT_IGNOREFAILEDSOURCES = 'true'
+        $env:INPUT_PREFERLATESTVERSION = 'false'
 
         # run the 'gitversion/setup' action
         node ./gitversion/setup/bundle.js
@@ -57,7 +49,7 @@ jobs:
         # set the inputs for the 'gitversion/execute' action
         $env:INPUT_TARGETPATH = './'
         $env:INPUT_DISABLECACHE = 'true'
-        $env:INPUT_DISABLENORMALIZATION = 'true'
+        $env:INPUT_DISABLENORMALIZATION = 'false'
         $env:INPUT_OVERRIDECONFIG = '
           next-version=1.0.0
           update-build-number=false'
