--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,12 @@ jobs:
     - uses: actions/checkout@v4
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
       with:
+        fetch-depth: 0
         token: ${{ secrets.PUSH_GITHUB_TOKEN }}
     - uses: actions/checkout@v4
       if: github.event_name == 'pull_request'
-    - name: Fetch all history for all tags and branches
-      run: |
-        git fetch --prune --unshallow
+      with:
+        fetch-depth: 0
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
