--- a/.azure/example-10.yml
+++ b/.azure/example-10.yml
@@ -1,3 +1,5 @@
+trigger: none
+
 variables:
   - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
     value: 'true'
@@ -42,14 +44,17 @@ stages:
           - pwsh: |
               echo "FullSemVer (myvar_fullSemVer)          : $(myvar_fullSemVer)"
             displayName: Use mapped job variables (pwsh - outputs without prefix)
+
           - pwsh: |
               echo "FullSemVer (env:localvar_fullSemVer)   : $env:localvar_fullSemVer"
             displayName: Use mapped local env from job variables (pwsh - outputs without prefix)
             env:
               localvar_fullSemVer: $(myvar_fullSemVer)
+
           - bash: |
               echo "FullSemVer (myvar_fullSemVer)   : $(myvar_fullSemVer)"
             displayName: Use mapped job variables (bash - outputs without prefix)
+
           - bash: |
               echo "FullSemVer (localvar_fullSemVer)   : $localvar_fullSemVer"
             displayName: Use mapped local env from job variables (bash - outputs without prefix)
@@ -70,14 +75,17 @@ stages:
           - pwsh: |
               echo "FullSemVer (myvar_GitVersion_FullSemVer)          : $(myvar_GitVersion_FullSemVer)"
             displayName: Use mapped job variables (pwsh - outputs with prefix)
+
           - pwsh: |
               echo "FullSemVer (env:localvar_GitVersion_FullSemVer)   : $env:localvar_GitVersion_FullSemVer"
             displayName: Use mapped local env from job variables (pwsh - outputs with prefix)
             env:
               localvar_GitVersion_FullSemVer: $(myvar_GitVersion_FullSemVer)
+
           - bash: |
               echo "FullSemVer (localvar_GitVersion_FullSemVer)   : $localvar_GitVersion_FullSemVer"
             displayName: Use mapped job variables (bash - outputs with prefix)
+
           - bash: |
               echo "FullSemVer (localvar_GitVersion_FullSemVer)   : $localvar_GitVersion_FullSemVer"
             displayName: Use mapped local env from job variables (bash - outputs with prefix)
