--- a/.github/ISSUE_TEMPLATE/issue-report.yml
+++ b/.github/ISSUE_TEMPLATE/issue-report.yml
@@ -14,6 +14,7 @@ body:
 - type: dropdown
   attributes:
     label: GitVersion package
+    multiple: true
     options:
     - GitHub Actions
     - AzureDevops task
