#1090 - added disableShallowCloneCheck option

--- a/gitversion/execute/action.yml
+++ b/gitversion/execute/action.yml
@@ -20,6 +20,10 @@ inputs:
     description: Whether to disable GitVersion normalization
     required: false
     default: 'false'
+  disableShallowCloneCheck:
+    description: Whether to disable the check for shallow clone
+    required: false
+    default: 'false'
   useConfigFile:
     description: Whether to use a custom configuration file
     required: false
