--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,8 +80,8 @@ jobs:
     - name: Rebuild dist and push
       run: |
         git add --verbose .
-        git config user.name 'Artur'
-        git config user.email 'arturcic@gmail.com'
+        git config user.name 'Artur Stolear'
+        git config user.email 'artur.stolear@gmail.com'
         git commit -m 'dist update' --allow-empty
         git push --force
       if: steps.status.outputs.has_changes == '1'
