--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -8,7 +8,7 @@ pull_request_rules:
   - name: Automatic merge on dependabot PR after success CI
     conditions:
       - author~=^dependabot(|-preview)\[bot\]$
-      - '#commits-behind=0' # Only merge up to date pull requests
+      - '#commits-behind=0' # Only merge up-to-date pull requests
     actions:
       merge:
   - name: Thank contributor
